Devex server 7.6.2 GA PR (#243)
* Added error for CYCLE clause in WITH RECURSIVE page in 7.6.2 (#231)

* Added error for 7.6.2

* Added patch release

* [DOC-12129] base64 encoding/decoding functions in Eventing (Server 7.6.2) (#229)

* Added info about base64 functions

* Small update to language construct page

* DOC-11756: JavaScript language restrictions for JS-UDFs [Server 7.6.2] (#237)

* DOC-11756 Language Restrictions
* DOC-10013 Update title of calling JavaScript topic
* DOC-10013 Update JavaScript UDF introduction to describe inline and external functions
* DOC-10013 Add titles to diagram preview doc
* DOC-10013 Improve partial for external libraries and scopes
* DOC-10013 Add partial for SQL++ Managed UDFs
* DOC-10013 Minor wording updates for JavaScript UDF diagrams
* DOC-10013 Minor wording updates for JavaScript UDF reference
* DOC-10013 Update links for JavaScript UDF reference
* DOC-10013 Minor formatting updates for CREATE FUNCTION
* DOC-10013 These lines left blank intentionally
* DOC-10013 Add extra link to Calling SQL++ from JavaScript
* Remove unused nav partial for JavaScript UDFs
* Drive-by fix: link to Query Admin page
* Drive-by fix: replace SVG files with Kroki diagrams
* Updates after review

* DOC-12048: New indexer setting for default value of "defer build" (#239)

* Add section on deferring index builds by default
* Add horizontal style for all index arguments
* Use tables for object parameters
* Remove outdated version notices
* Minor formatting changes: consistent brackets, admonition placement
* Added note that you cannot use WITH NODES if you have enabled file-based index rebalancing

* [DOC-12139] Raise Dimensionality Support for Vector Search  (#212)

* [DOC-12038] Added xattrs object to REST API example, create-search-index-payload.sh

Created a new example to show all of the nested JSON objects in a search index definition with nest-json-object-example.jsonc

Added an xattrs example to query-field-name.jsonc

Added xattrs to sim

--- a/modules/eventing/pages/eventing-advanced-keyspace-accessors.adoc
+++ b/modules/eventing/pages/eventing-advanced-keyspace-accessors.adoc
@@ -407,9 +407,7 @@ function OnUpdate(doc, meta) {
 [#advanced-touch-op]
 == Advanced TOUCH Operation
 
-ifeval::['{page-component-version}' == '7.6'] 
-_(Introduced in Couchbase Server 7.6)_ 
-endif::[]
+[.status]#Couchbase Server 7.6#
 
 `result = couchbase.touch(binding, meta)`
 
@@ -464,6 +462,8 @@ function OnUpdate(doc, meta) {
 
 [#advanced-subdoc-array-op-mutatein]
 == Sub-Document MUTATEIN Operation
+
+[.status]#Couchbase Server 7.6#
 
 `result = couchbase.mutateIn(binding, meta, subdoc_operation_array, options)`
 
@@ -557,6 +557,8 @@ function OnUpdate(doc, meta, xattrs) {
 
 [#advanced-subdoc-array-op-lookupin]
 == Sub-Document LOOKUPIN Operation
+
+[.status]#Couchbase Server 7.6.2#
 
 `result = couchbase.lookupIn(binding, meta, subdoc_array, options)`
 
@@ -703,6 +705,8 @@ function OnUpdate(doc, meta) {
 
 [#optional-params-recursion]
 === Optional `{ "self_recursion": true }` Parameter
+
+[.status]#Couchbase Server 7.6#
 
 You can use the optional fourth parameter `{ "self_recursion": true }` to prevent the suppression of recursive source bucket mutations and to process the mutations that you have just created.
 
