--- a/modules/n1ql/pages/n1ql-language-reference/with-recursive.adoc
+++ b/modules/n1ql/pages/n1ql-language-reference/with-recursive.adoc
@@ -73,6 +73,22 @@ It enables you to specify one or more fields whose values are likely to repeat.
 expr::
 (Required) An xref:n1ql:n1ql-language-reference/identifiers.adoc[identifier] or a xref:n1ql:n1ql-language-reference/select-syntax.adoc#path[path] representing a field/nested-field.
 
+[.status]#Couchbase Server 7.6.2#
+
+In Couchbase Server 7.6.2, the CYCLE clause returns the following error if you enter an invalid expression:
+
+[source,json]
+----
+{
+  "errors": [
+    {
+      "code": 3307,
+      "msg": "Cycle fields validation failed for with term: cyc - cause: invalid cycle field expression term: (1 + 1) only identifier/path expressions are allowed"
+    }
+  ]
+}
+----
+
 [[options-clause]]
 === OPTIONS Clause
 [source,ebnf]
