--- a/modules/n1ql/partials/nav.adoc
+++ b/modules/n1ql/partials/nav.adoc
@@ -21,6 +21,12 @@
     *** xref:guides:insert.adoc[]
     *** xref:guides:update.adoc[]
     *** xref:guides:delete.adoc[]
+ifdef::flag-devex-javascript-udfs[]
+  ** xref:guides:javascript-udfs.adoc[]
+    *** xref:guides:create-javascript-library.adoc[]
+    *** xref:guides:create-user-defined-function.adoc[]
+    *** xref:guides:call-user-defined-function.adoc[]
+endif::flag-devex-javascript-udfs[]
   ** xref:n1ql:advanced.adoc[]
     *** xref:n1ql:n1ql-language-reference/cost-based-optimizer.adoc[]
     *** xref:guides:cbo.adoc[]
