--- a/modules/search/pages/create-xattrs-mapping.adoc
+++ b/modules/search/pages/create-xattrs-mapping.adoc
@@ -2,7 +2,7 @@
 :page-topic-type: guide
 :page-ui-name: {ui-name}
 :page-product-name: {product-name}
-:description: Use the {page-ui-name} to create a mapping for Extended Attributes (XATTRs) and search for them with the Search Service.
+:description: Use the {page-ui-name} to create a mapping for Extended Attributes (XATTRs) and search for them with the Search Service, on Couchbase Server version 7.6.2 and later.
 
 [abstract]
 {description}
@@ -11,10 +11,10 @@ You must add an XATTRs mapping to your Search index to use and search for XATTRs
 
 == Prerequisites
 
-* Your cluster is running Couchbase Server version 7.6.2 or later.
+* Your database is running Couchbase Server version 7.6.2 or later.
 
-* You have the Search Service enabled on a node in your cluster.
-For more information about how to change Services on your cluster, see xref:cloud:clusters:modify-database.adoc[].
+* You have the Search Service enabled on a node in your database.
+For more information about how to change Services on your database, see xref:cloud:clusters:modify-database.adoc[].
 
 * You have created an index.
 For more information, see xref:create-search-index-ui.adoc[].
