--- a/modules/search/pages/search-index-params.adoc
+++ b/modules/search/pages/search-index-params.adoc
@@ -931,7 +931,7 @@ A JSON object field object must:
 * Have a name that matches a JSON object child field in your documents.
 * Use the same property structure as a `\{scope\}.\{collection\}` object.
 
-If your cluster is running Couchbase Server version 7.6.2 and later and you're adding Extended Attributes (XATTRs) from your document metadata to your Search index, your XATTRs mapping definition must: 
+If your database is running Couchbase Server version 7.6.2 and later and you're adding Extended Attributes (XATTRs) from your document metadata to your Search index, your XATTRs mapping definition must: 
 
 * Be a child object of a `\{scope\}.\{collection\}` object.
 * Have the name `_$xattrs`.
@@ -947,7 +947,7 @@ include::example$nested-json-object-example.jsonc[]
 ----
 
 You can view the JSON document schema for this example by looking at any document in the `hotel` collection from the `travel-sample` dataset.
-For more information, see xref:manage:manage-documents/manage-documents.adoc[].
+For more information, see xref:clusters:data-service/manage-documents.adoc[].
 
 `\{scope\}.\{collection\}` objects, JSON Object Field objects, and XATTRs objects can contain the following properties:
 
