--- a/modules/search/partials/vector-search-field-descriptions.adoc
+++ b/modules/search/partials/vector-search-field-descriptions.adoc
@@ -36,7 +36,7 @@ For more information about Vector Search indexes, see xref:vector-search:vector-
 // tag::dimension[]
 For a `vector` child field, enter the total number of elements in the vector embedding array.
 
-Vector Search indexes can support arrays with up to 2048 elements.
+From Couchbase Server version 7.6.2 and later, Vector Search indexes can support arrays with up to 4096 elements.
 Arrays can be an array of arrays. 
 
 For more information about Vector Search indexes, see xref:vector-search:vector-search.adoc[] or xref:vector-search:create-vector-search-index-ui.adoc[].
