--- a/modules/vector-search/pages/run-vector-search-ui.adoc
+++ b/modules/vector-search/pages/run-vector-search-ui.adoc
@@ -48,7 +48,7 @@ For example, the following query searches for the top 2 vectors similar to the v
 include::example$run-vector-search-payload-ui.jsonc[]
 ----
 
-By using the special `match_none` query in the `query` field, the Search query is only a Vector Search query.
+The Search query is only a Vector Search query.
 It only returns the `k` number of similar vectors.
 
 The Search Service combines the Vector search results from a `knn` object with the traditional `query` object by using an `OR` function. 
@@ -102,7 +102,7 @@ Make sure you remove the lines for `// tag::partial[]` and `// end::partial[]`.
 [#base64]
 === Example: Running a Semantic Search Query with a base64 Encoded String 
 
-If your cluster is running Couchbase Server version 7.6.2 or later, you can use vectors encoded as base64 strings with Vector Search. 
+If your database is running Couchbase Server version 7.6.2 or later, you can use vectors encoded as base64 strings with Vector Search. 
 For example, the following document describes the color `navy`, with base64 encoded strings in the `embedding_vector_dot` and `colorvect_l2` fields instead of arrays: 
 
 [source,json]
