--- a/modules/n1ql/pages/n1ql-language-reference/dropindex.adoc
+++ b/modules/n1ql/pages/n1ql-language-reference/dropindex.adoc
@@ -9,6 +9,9 @@
 :identifiers: xref:n1ql-language-reference/identifiers.adoc
 :drop-primary-index: xref:n1ql-language-reference/dropprimaryindex.adoc
 
+// TEMP
+include::partial$n1ql-language-reference/horizontal-style.adoc[]
+
 {description}
 Dropping an index that has replicas will also drop all of the replica indexes too.
 You can drop unnamed primary indexes using the {drop-primary-index}[DROP PRIMARY INDEX] statement.
@@ -33,9 +36,10 @@ image::n1ql-language-reference/drop-index.png["Syntax diagram: refer to source c
 
 The DROP INDEX statement provides two possible syntaxes for specifying the index and the keyspace where the index is located.
 
-index-name:: (Required) A unique name that identifies the index.
-
 // TODO: Automatic links in EBNF.
+
+[horizontal]
+index-name:: (Required) A unique name that identifies the index.
 
 index-path:: (Optional) One possible syntax for specifying the the keyspace.
 Refer to <<index-path>> below.
@@ -86,6 +90,7 @@ image::n1ql-language-reference/keyspace-full.png["Syntax diagram: refer to sourc
 If the index is built on a named collection, the index path may be a full keyspace path, including namespace, bucket, scope, and collection, followed by the index name.
 In this case, the {query-context}[query context] is ignored.
 
+[horizontal]
 namespace::
 (Required) An {identifiers}[identifier] that refers to the {logical-hierarchy}[namespace] of the keyspace.
 Currently, only the `default` namespace is available.
@@ -116,6 +121,7 @@ image::n1ql-language-reference/keyspace-prefix.png["Syntax diagram: refer to sou
 If the index is built on the default collection in the default scope within a bucket, the index path may be just an optional namespace and the bucket name, followed by the index name.
 In this case, the {query-context}[query context] should not be set.
 
+[horizontal]
 namespace::
 (Optional) An {identifiers}[identifier] that refers to the {logical-hierarchy}[namespace] of the keyspace.
 Currently, only the `default` namespace is available.
@@ -141,6 +147,7 @@ image::n1ql-language-reference/keyspace-partial.png["Syntax diagram: refer to so
 Alternatively, if the keyspace is a named collection, the index path may be just the collection name, followed by the index name.
 In this case, you must set the {query-context}[query context] to indicate the required namespace, bucket, and scope.
 
+[horizontal]
 collection::
 (Required) An {identifiers}[identifier] that refers to the {logical-hierarchy}[collection name] of the keyspace.
 
@@ -177,6 +184,7 @@ image::n1ql-language-reference/keyspace-path.png["Syntax diagram: refer to sourc
 If the keyspace is a named collection, or the default collection in the default scope within a bucket, the keyspace reference may be a keyspace path.
 In this case, the {query-context}[query context] should not be set.
 
+[horizontal]
 namespace::
 (Optional) An {identifiers}[identifier] that refers to the {logical-hierarchy}[namespace] of the keyspace.
 Currently, only the `default` namespace is available.
@@ -212,6 +220,7 @@ image::n1ql-language-reference/keyspace-partial.png["Syntax diagram: refer to so
 Alternatively, if the keyspace is a named collection, the keyspace reference may be just the collection name.
 In this case, you must set the {query-context}[query context] to indicate the required namespace, bucket, and scope.
 
+[horizontal]
 collection::
 (Required) An {identifiers}[identifier] that refers to the {logical-hierarchy}[collection name] of the keyspace.
 
