--- a/modules/javascript-udfs/pages/.javascript-functions-with-couchbase.adoc
+++ b/modules/javascript-udfs/pages/.javascript-functions-with-couchbase.adoc
@@ -1,9 +1,11 @@
-= JavaScript Functions with Couchbase
-:description: Writing Couchbase extension functions in the JavaScript Language.
+= JavaScript Functions for Query Reference
+:description: This reference guide describes how to write extension functions for {sqlpp} for Query using the JavaScript language.
 ifndef::flag-devex-javascript-udfs[]
 :page-embargo: EMBARGOED
 endif::flag-devex-javascript-udfs[]
+:page-topic-type: reference
 :page-toclevels: 2
+:keywords: library namespacing
 
 [abstract]
 {description}
@@ -12,43 +14,56 @@ endif::flag-devex-javascript-udfs[]
 
 include::partial$javascript-udf-introduction.adoc[]
 
+This reference includes details of external functions using JavaScript.
 
-If you want to learn how to create JavaScript function libraries using the administration console and/or the REST-API then take a look at the xref:guides:javascript-udfs.adoc[JavaScript UDF Guides].
+include::partial$libraries-and-scopes.adoc[]
+
+include::partial$sqlpp-managed-udfs.adoc[]
 
 == Added Constructs
 
-JavaScript functions in Couchbase support most of the language constructs available in https://en.wikipedia.org/wiki/ECMAScript[ECMAScript], though there are a number of restrictions related to the Couchbase environment.
+JavaScript functions in {sqlpp} for Query support most of the language constructs available in https://en.wikipedia.org/wiki/ECMAScript[ECMAScript], though there are a number of restrictions related to the Couchbase environment.
 There are also additions that have been made to the language for working specifically with Couchbase.
 
 === {sqlpp} Embedded Statements
 
 Top level {sqlpp} keywords, such as SELECT, UPDATE, INSERT and DELETE, are available as inline keywords in functions.
-Operations that return values such as SELECT are accessible through a returned iterable handle. 
+Operations that return values such as SELECT are accessible through a returned iterable handle.
 {sqlpp} Query results, via a SELECT, are streamed in batches to the iterable handle as the iteration progresses through the result set.
 
+.JavaScript code with embedded {sqlpp} statements
+====
 [source, javascript]
 ----
 include::example$select-airline-inline.js[]
 ----
+
 <1> The {sqlpp} is written directly into the JavaScript code without having to be used as part of a function call.
 You can even provide parameters that can be used in the {sqlpp} statement.
 <2> A standard JavaScript iterator is used to access the values returned from the {sqlpp} statement.
+====
 
-include::partial$libraries-and-scopes.adoc[leveloffset=+2]
+For more details, see xref:calling-n1ql-from-javascript.adoc[].
 
 == Unsupported Features
 
+The following features are not supported in JavaScript functions for Query.
+
 === Browser Extensions
 
-Because JavaScript UDF functions do not execute in the context of a browser, the extensions that browsers add to the core language, such as window methods, DOM events etc. are not available.
+Because JavaScript functions in {sqlpp} for Query do not execute in the context of a browser, the extensions that browsers add to the core language, such as window methods, DOM events, and so on, are not available.
 
 === Global State
-All variables  must be local to the function; global state is not permitted.
 
+All variables must be local to the function; global state is not permitted.
+
+.JavaScript code with global variable
+====
 [source, javascript]
 ----
 include::example$illegal-global-variable.js[]
 ----
+====
 
 Along with global state, global https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Functions/Arrow_functions[arrow functions] are not supported.
 Arrow functions local to individual JavaScript functions are supported.
@@ -57,11 +72,107 @@ Arrow functions local to individual JavaScript functions are supported.
 
 Logging using the `console.log(..)` function is not supported.
 
-In the rest of this section, you're going to look at the concepts behind JavaScript User-Defined Functions:
+== Restricted Features
 
+[.status]#Couchbase Server 7.6.2#
+
+The following features are restricted in JavaScript functions for Query in Couchbase Server 7.6.2 and later.
+
+=== Code Injection
+
+JavaScript constructs that may allow for code injection have been removed:
+
+* The `eval` symbol has been removed.
+* The `Function` construct has been removed.
+
+.JavaScript code with the `eval` symbol
+====
+The following example does not compile as it uses the `eval` symbol.
+
+[source,javascript]
+----
+function evaluate() {
+    var q = select jscode from <bucket> where meta().id = <docid>;
+    let iter = q[Symbol.iterator]();
+    let code = iter.next();
+    let result = eval(code);
+}
+----
+====
+
+.JavaScript code with the `Function` construct
+====
+The following example does not compile as it uses the `Function` construct.
+
+[source,javascript]
+----
+function dynamicfunction() {
+var q = select jscode from <bucket> where meta().id = <docid>;
+    let iter = q[Symbol.iterator]();
+    let code = iter.next();
+  return new Function("inject", code);
+}
+
+function evaluate() {
+    dynamicfunction();
+}
+----
+====
+
+=== Date Granularity
+
+The granularity of the `Date` object has been reduced to 1 second.
+This is to prevent a potential attacker from easily measuring the difference between a CPU cache miss and cache hit, hence taking advantage of side-channel attacks or speculative execution attacks.
+
+.JavaScript code with timestamp
+====
+The following example executes a {sqlpp} query to insert a document with a field containing the current timestamp.
+The timestamp is returned to the last second, rather than the most recent millisecond.
+
+[source,javascript]
+----
+function addOrder() {
+    let curr = Date.now();
+    N1QL('INSERT INTO orders VALUES (uuid(),{"time":'+ curr +'})')
+}
+----
+====
+
+.JavaScript code with date comparison
+====
+The following example simulates sleep by blocking execution by the number of milliseconds passed as a function parameter.
+Since the `Date.Now()` function does not return the current time with millisecond granularity, the function may not work as expected.
+
+[source,javascript]
+----
+function sleep(milliseconds) {
+  let init = Date.now();
+  let curr = null;
+  do {
+     curr = Date.now();
+   } while (curr - init < milliseconds);
+}
+----
+====
+
+== See Also
+
+.User-Defined Function Guides
+* xref:guides:javascript-udfs.adoc[]
+* xref:n1ql:n1ql-intro/sysinfo.adoc#sys-functions[Monitor Functions]
+
+.{sqlpp} User-Defined Function Commands
+* xref:n1ql:n1ql-language-reference/createfunction.adoc[]
+* xref:n1ql:n1ql-language-reference/explainfunction.adoc[]
+* xref:n1ql:n1ql-language-reference/execfunction.adoc[]
+* xref:n1ql:n1ql-language-reference/dropfunction.adoc[]
+* xref:n1ql:n1ql-language-reference/userfun.adoc[]
+
+.External Libraries
+* xref:tools:udfs-ui.adoc[]
+* xref:n1ql:n1ql-rest-api/functions.adoc[]
+
+.JavaScript Functions
 * xref:calling-javascript-from-n1ql.adoc[]
 * xref:calling-n1ql-from-javascript.adoc[]
 * xref:handling-errors-javascript-udf.adoc[]
-
-
-
