--- a/modules/n1ql/pages/n1ql-language-reference/build-index.adoc
+++ b/modules/n1ql/pages/n1ql-language-reference/build-index.adoc
@@ -12,6 +12,9 @@
 :querying-indexes: xref:n1ql-intro/sysinfo.adoc#querying-indexes
 :keyspace-ref: xref:n1ql-language-reference/createindex.adoc#keyspace-ref
 
+// TEMP
+include::partial$n1ql-language-reference/horizontal-style.adoc[]
+
 [abstract]
 {description}
 
@@ -68,6 +71,7 @@ image::n1ql-language-reference/build-index.png["Syntax diagram: refer to source 
 
 // TODO: Automatic links in EBNF.
 
+[horizontal]
 keyspace-ref:: (Required) Specifies the keyspace where the indexes are built.
 Refer to <<keyspace-ref>> below.
 
