--- a/modules/n1ql/pages/n1ql-language-reference/createindex.adoc
+++ b/modules/n1ql/pages/n1ql-language-reference/createindex.adoc
@@ -20,6 +20,9 @@ Secondary indexes contain a filtered or a full set of keys in a given keyspace.
 :logical-hierarchy: xref:n1ql:n1ql-intro/queriesandresults.adoc#logical-hierarchy
 :querying-indexes: xref:n1ql-intro/sysinfo.adoc#querying-indexes
 
+// TEMP
+include::partial$n1ql-language-reference/horizontal-style.adoc[]
+
 The `CREATE INDEX` statement allows you to create a secondary index.
 Secondary indexes contain a filtered or a full set of keys in a given keyspace.
 Secondary indexes are optional but increase query efficiency on a keyspace.
@@ -58,37 +61,37 @@ include::partial$grammar/ddl.ebnf[tag=create-index]
 
 image::n1ql-language-reference/create-index.png["Syntax diagram: refer to source code listing", align=left]
 
-[[index-name,index-name]]
-index-name:: [Required] A unique name that identifies the index.
+// TODO: Automatic links in EBNF.
+
+[horizontal#index-name, reftext="index-name"]
+index-name:: (Required) A unique name that identifies the index.
 +
 Valid GSI index names can contain any of the following characters: `A-Z` `a-z` `0-9` `&num;` `&lowbar;`, and must start with a letter, [`A-Z` `a-z`].
 The minimum length of an index name is 1 character and there is no maximum length set for an index name.
 When querying, if the index name contains a `&num;` or `&lowbar;` character, you must enclose the index name within backticks.
 
-// TODO: Automatic links in EBNF.
-
-keyspace-ref:: [Required] Specifies the keyspace where the index is created.
+keyspace-ref:: (Required) Specifies the keyspace where the index is created.
 Refer to <<keyspace-ref>> below.
 
-index-key:: [Required] Specifies an index key.
+index-key:: (Required) Specifies an index key.
 Refer to <<index-key>> below.
 
-lead-key-attribs:: [Optional] Specifies attributes for the leading index key.
+lead-key-attribs:: (Optional) Specifies attributes for the leading index key.
 Refer to <<index-key-attrib>> below.
 
-key-attribs:: [Optional] Specifies attributes for a non-leading index key.
+key-attribs:: (Optional) Specifies attributes for a non-leading index key.
 Refer to <<index-key-attrib>> below.
 
-index-partition:: [Optional] Specifies index partitions.
+index-partition:: (Optional) Specifies index partitions.
 Refer to <<index-partition>> below.
 
-where-clause:: [Optional] Specifies filters for a partial index.
+where-clause:: (Optional) Specifies filters for a partial index.
 Refer to <<where-clause>> below.
 
-index-using:: [Optional] Specifies the index type.
+index-using:: (Optional) Specifies the index type.
 Refer to <<index-using>> below.
 
-index-with:: [Optional] Specifies options for the index.
+index-with:: (Optional) Specifies options for the index.
 Refer to <<index-with>> below.
 
 [[if-not-exists]]
@@ -130,6 +133,7 @@ image::n1ql-language-reference/keyspace-path.png["Syntax diagram: refer to sourc
 If the keyspace is a named collection, or the default collection in the default scope within a bucket, the keyspace reference may be a keyspace path.
 In this case, the {query-context}[query context] should not be set.
 
+[horizontal]
 namespace::
 (Optional) An {identifiers}[identifier] that refers to the {logical-hierarchy}[namespace] of the keyspace.
 Currently, only the `default` namespace is available.
@@ -165,6 +169,7 @@ image::n1ql-language-reference/keyspace-partial.png["Syntax diagram: refer to so
 Alternatively, if the keyspace is a named collection, the keyspace reference may be just the collection name with no path.
 In this case, you must set the {query-context}[query context] to indicate the required namespace, bucket, and scope.
 
+[horizontal]
 collection::
 (Required) An {identifiers}[identifier] that refers to the {logical-hierarchy}[collection name] of the keyspace.
 
@@ -185,7 +190,7 @@ image::n1ql-language-reference/index-key.png["Syntax diagram: refer to source co
 Refers to an attribute name or a scalar function or an ARRAY expression on the attribute.
 This constitutes an index-key for the index.
 
-[[index-key-args]]
+[horizontal#index-key-args]
 expr::
 A {sqlpp} {expression}[expression] over any fields in the document.
 This cannot use constant expressions, aggregate functions, or sub-queries.
@@ -214,10 +219,11 @@ image::n1ql-language-reference/key-attribs.png["Syntax diagram: refer to source 
 
 Specifies attributes for the index key.
 
-index-order:: [Optional] All index keys may include an index order clause.
+[horizontal]
+index-order:: (Optional) All index keys may include an index order clause.
 Refer to <<index-order>> below.
 
-include-missing:: [Optional] The leading index key may also include `INCLUDE MISSING` clause.
+include-missing:: (Optional) The leading index key may also include `INCLUDE MISSING` clause.
 Refer to <<include-missing>> below.
 
 [[index-order]]
@@ -232,6 +238,7 @@ image::n1ql-language-reference/index-order.png["Syntax diagram: refer to source 
 
 Specifies the sort order of the index key.
 
+[horizontal]
 `ASC`::
 The index key is sorted in ascending order.
 
@@ -273,7 +280,7 @@ include::partial$grammar/dql.ebnf[tag=where-clause]
 
 image::n1ql-language-reference/where-clause.png["Syntax diagram: refer to source code listing", align=left]
 
-[[where-clause-args]]
+[horizontal#where-clause-args]
 cond::
 Specifies WHERE clause predicates to qualify the subset of documents to include in the index.
 
@@ -302,44 +309,60 @@ image::n1ql-language-reference/index-with.png["Syntax diagram: refer to source c
 
 Use the WITH clause to specify additional options.
 
-[[index-with-args]]
+[horizontal#index-with-args]
 expr::
-An object with the following properties:
+An object with the following properties.
 
-nodes;;
-[Optional] An array of strings, each of which represents a node name.
-+
+[options="header", cols="1a,4a,1a"]
+|===
+|Name|Description|Schema
+
+|**nodes** +
+__optional__
+| An array of strings, each of which represents a node name.
+
+include::partial$n1ql-language-reference/file-based-index-rebalance-note.adoc[]
+
 You can specify multiple nodes to distribute replicas of an index across nodes running the indexing service: for example, `WITH {"nodes": ["node1:8091", "node2:8091", "node3:8091"]}`.
 For details and examples, refer to {index-replication}[Index Replication].
-+
+
 If specifying both [.var]`nodes` and [.var]`num_replica`, the number of nodes in the array must be one greater than the specified number of replicas otherwise the index creation will fail.
-+
+
 (((default index placement)))If [.var]`nodes` is not specified, then the system chooses nodes on which to place the new index and any replicas, in order to achieve the best resource utilization across nodes running the indexing service.
 This is done by taking into account the current resource usage statistics of index nodes.
-+
-IMPORTANT: A node name passed to the `nodes` property must include the cluster administration port, by default 8091.
-For example `WITH {"nodes": ["192.0.2.0:8091"]}` instead of `WITH {"nodes": ["192.0.2.0"]}`.
 
-defer_build;;
-[Optional] Boolean.
+'''
+A node name passed to the `nodes` property must include the cluster administration port, by default 8091.
 
-true:::
-When set to `true`, the `CREATE INDEX` operation queues the task for building the index but immediately pauses the building of the index of type GSI.
+**Example:** `["192.0.2.0:8091"]`
+|String array
+
+|**defer_build** +
+__optional__
+| Whether the index should be created in deferred build mode.
+
+When set to `true`, the `CREATE INDEX` operation queues the task for building the GSI index but immediately pauses the building of the index.
 Index building requires an expensive scan operation.
 Deferring building of the index with multiple indexes can optimize the expensive scan operation.
-Admins can defer building multiple indexes and, using the `BUILD INDEX` statement, multiple indexes to be built efficiently with one efficient scan of bucket data.
+Admins can defer building multiple indexes and, using the `BUILD INDEX` statement, build multiple indexes efficiently with one efficient scan of bucket data.
 
-false:::
-When set to `false`, the `CREATE INDEX` operation queues the task for building the index and immediately kicks off the building of the index of type GSI.
+When set to `false`, the `CREATE INDEX` operation queues the task for building the GSI index and immediately kicks off the building of the index.
 
-num_replica;;
-+
-[Optional] Integer that specifies the number of {index-replication}[replicas] of the index to create.
-+
+**Default:** `false`
+|Boolean
+
+|**num_replica** +
+__optional__
+| The number of {index-replication}[replicas] of the index to create.
+
 The indexer will automatically distribute these replicas amongst index nodes in the cluster for load-balancing and high availability purposes.
 The indexer will attempt to distribute the replicas based on the server groups in use in the cluster where possible.
-+
+
 If the value of this property is not less than the number of index nodes in the cluster, then the index creation will fail.
+
+**Default:** `1`
+|Integer
+|===
 
 == Usage
 
@@ -395,6 +418,37 @@ By default, index replicas are used to serve index scans.
 The system automatically load-balances an index scan across the index and all its replicas.
 Adding index replicas enables you to scale scan throughput, in addition to providing high availability.
 ====
+
+ifdef::flag-devex-rest-api[]
+=== Defer Index Builds by Default
+
+[.status]#Couchbase Server 7.6.2#
+
+Usually, the default setting for the `defer_build` option is `false`.
+In Couchbase Server 7.6.2 and later, you can change the default setting for the `defer_build` option.
+
+If you change the default setting for `defer_build` to `true`, index creation operates in deferred build mode by default.
+
+To change the default setting for deferred builds, use the REST API to set the `indexer.settings.defer_build` property.
+For example,
+
+[source,sh]
+----
+curl http://$BASEURL:9102/settings -u $USER:$PASSWORD \
+-d '{"indexer.settings.defer_build": true}'
+----
+
+Use the following command to retrieve the indexer settings:
+
+[source,sh]
+----
+curl -X GET http://$BASEURL:9102/settings -u $USER:$PASSWORD
+----
+
+* `$BASEURL` is the base URL for the API call, for example: `localhost`.
+* `$USER` is the username, for example: `Administrator`.
+* `$PASSWORD` is the password.
+endif::flag-devex-rest-api[]
 
 == Examples
 
