--- a/modules/n1ql/pages/n1ql-language-reference/dropprimaryindex.adoc
+++ b/modules/n1ql/pages/n1ql-language-reference/dropprimaryindex.adoc
@@ -8,6 +8,9 @@
 :identifiers: xref:n1ql-language-reference/identifiers.adoc
 :logical-hierarchy: xref:n1ql-intro/queriesandresults.adoc#logical-hierarchy
 
+// TEMP
+include::partial$n1ql-language-reference/horizontal-style.adoc[]
+
 {description}
 
 IMPORTANT: Named primary indexes that are created using CREATE PRIMARY INDEX can only be dropped using the DROP INDEX command.
@@ -31,10 +34,11 @@ image::n1ql-language-reference/drop-primary-index.png["Syntax diagram: refer to 
 
 // TODO: Automatic links in EBNF.
 
-keyspace-ref:: [Required] Specifies the keyspace where the index is located.
+[horizontal]
+keyspace-ref:: (Required) Specifies the keyspace where the index is located.
 Refer to <<keyspace-ref>> below.
 
-index-using:: [Optional] Specifies the index type.
+index-using:: (Optional) Specifies the index type.
 Refer to <<index-using>> below.
 
 [[if-exists]]
@@ -76,6 +80,7 @@ image::n1ql-language-reference/keyspace-path.png["Syntax diagram: refer to sourc
 If the keyspace is a named collection, or the default collection in the default scope within a bucket, the keyspace reference may be a keyspace path.
 In this case, the {query-context}[query context] should not be set.
 
+[horizontal]
 namespace::
 (Optional) An {identifiers}[identifier] that refers to the {logical-hierarchy}[namespace] of the keyspace.
 Currently, only the `default` namespace is available.
@@ -111,6 +116,7 @@ image::n1ql-language-reference/keyspace-partial.png["Syntax diagram: refer to so
 Alternatively, if the keyspace is a named collection, the keyspace reference may be just the collection name with no path.
 In this case, you must set the {query-context}[query context] to indicate the required namespace, bucket, and scope.
 
+[horizontal]
 collection::
 (Required) An {identifiers}[identifier] that refers to the {logical-hierarchy}[collection name] of the keyspace.
 
