[DOC-11988-7.6]: RBAC role change impact to eventing function Minor corrections

--- a/modules/eventing/pages/eventing-rbac.adoc
+++ b/modules/eventing/pages/eventing-rbac.adoc
@@ -69,7 +69,7 @@ The following minimal resources are required for a non-privileged user to access
 * Data DCP reader
 ** Mutation Source
 * Eventing / Manage Scope Function
-** bucket.scope or bucket.*
+** bucket.scope or bucket.
 
 == Minimal Eventing RBAC role example
 
@@ -105,7 +105,7 @@ image::rbac_min_c.png[,538,align=middle]
 
 * Access the Couchbase Web Console > Security 
 
-* Select GROUPS on the right, you should see your definition for GROUP "eventing_min"
+* Select GROUPS on the right, you should see your definition for GROUP `eventing_min`.
 +
 image::rbac_min_groups.png[,%100]
 
