DOC-12650: Convert N1QL REST API references to use OpenAPI generator (#278)
* Update links to Query Admin REST API
* Update links to Query Service REST API
* Update links to Functions REST API
* Run update statistics via the cbq shell
* Update inline CSS
* Update includes from Query Admin and Query Service REST APIs

--- a/modules/guides/pages/prep-statements.adoc
+++ b/modules/guides/pages/prep-statements.adoc
@@ -550,7 +550,7 @@ Reference:
 
 * xref:n1ql:n1ql-manage/monitoring-n1ql-query.adoc#sys-prepared[Manage and Monitor Prepared Statements]
 ifdef::flag-devex-rest-api[]
-* xref:n1ql:n1ql-rest-api/admin.adoc#_prepared_statements_resource[{sqlpp} Admin REST API for Prepared Statements]
+* xref:n1ql-rest-admin:index.adoc#tag-PreparedStatements[{sqlpp} Admin REST API for Prepared Statements]
 endif::flag-devex-rest-api[]
 
 Querying with SDKs:
