--- a/modules/n1ql/pages/n1ql-intro/cbq.adoc
+++ b/modules/n1ql/pages/n1ql-intro/cbq.adoc
@@ -528,7 +528,7 @@ To change credentials during a session, use the `\SET` shell command to specify 
 ====
 
 ifdef::flag-devex-rest-api[]
-For more information about the `creds` parameter, see xref:n1ql:n1ql-rest-api/intro.adoc#creds[Query Service REST API] and xref:n1ql:n1ql-rest-api/exauthrequest.adoc[].
+For more information about using multiple credentials, see xref:n1ql-rest-query:intro.adoc#creds[Query Service REST API] and xref:n1ql:n1ql-rest-api/exauthrequest.adoc[].
 endif::flag-devex-rest-api[]
 
 === Displaying the Credentials
