--- a/modules/n1ql/pages/n1ql-language-reference/execute.adoc
+++ b/modules/n1ql/pages/n1ql-language-reference/execute.adoc
@@ -272,7 +272,7 @@ curl -v http://localhost:8093/query/service -d 'prepared="fave_tweets"&$r=9.5'
 * For information on using prepared statements with the `cbq` command line shell, refer to xref:n1ql:n1ql-intro/cbq.adoc[].
 
 ifdef::flag-devex-rest-api[]
-* For information on using prepared statements with the Query REST API (`/query/service` endpoint), refer to xref:n1ql:n1ql-rest-api/index.adoc[].
+* For information on using prepared statements with the Query REST API (`/query/service` endpoint), refer to xref:n1ql-rest-query:index.adoc[].
 endif::flag-devex-rest-api[]
 
 * For information on using prepared statements with an SDK, refer to xref:java-sdk:concept-docs:n1ql-query.adoc#prepared-statements-for-query-optimization[Prepared Statements for Query Optimization] and xref:java-sdk:howtos:n1ql-queries-with-sdk.adoc#parameterized-queries[Parameterized Queries].
