--- a/modules/n1ql/pages/n1ql-manage/monitoring-n1ql-query.adoc
+++ b/modules/n1ql/pages/n1ql-manage/monitoring-n1ql-query.adoc
@@ -823,7 +823,7 @@ A completed request is logged if _any_ of the qualifiers are met (logical OR).
 `user`:: Log requests with this user name.
 `context`:: Log requests with this client context ID.
 
-For full details, see xref:n1ql:n1ql-rest-api/admin.adoc#_logging_parameters[Logging parameters].
+For full details, see xref:n1ql-rest-admin:index.adoc#Logging_Parameters[Logging Parameters].
 
 The basic syntax adds a qualifier to the logging parameters, i.e. any existing qualifiers are not removed.
 You can change the value of a logging qualifier by specifying the same qualifier again with a new value.
@@ -949,7 +949,7 @@ ifdef::flag-devex-rest-api[]
 [#enable-settings-for-a-query-engine]
 === Enable Query Profiling for a Query Node
 
-To activate query profiling at the node level, specify the `profile` setting using the xref:n1ql:n1ql-rest-api/admin.adoc[Admin REST API] (`/admin/settings` endpoint).
+To activate query profiling at the node level, specify the `profile` setting using the xref:n1ql-rest-admin:index.adoc[Admin REST API] (`/admin/settings` endpoint).
 
 .See the current node-level query settings
 ====
@@ -1028,7 +1028,7 @@ endif::flag-devex-rest-api[]
 To activate profiling at the request level, you can:
 
 ifdef::flag-devex-rest-api[]
-* Specify the `profile` setting using the xref:n1ql:n1ql-rest-api/index.adoc[Query REST API] (`/query/service` endpoint).
+* Specify the `profile` setting using the xref:n1ql-rest-query:index.adoc[Query REST API] (`/query/service` endpoint).
 endif::flag-devex-rest-api[]
 * Specify the `profile` setting using the xref:n1ql:n1ql-intro/cbq.adoc[cbq] command line tool.
 
