--- a/modules/guides/partials/javascript-udfs/further-reading.adoc
+++ b/modules/guides/partials/javascript-udfs/further-reading.adoc
@@ -37,11 +37,11 @@ of each page
 // end::create-function[]
 
 // tag::rest-create-library-call[]
-* xref:n1ql:n1ql-rest-api/functions.adoc#_post_library[REST API: Create or Update Library]
+* xref:n1ql-rest-functions:index.adoc#_post_library[REST API: Create or Update Library]
 // end::rest-create-library-call[]
 
 // tag::rest-delete-library-call[]
-* xref:n1ql:n1ql-rest-api/functions.adoc#_delete_library[REST API: Delete Library]
+* xref:n1ql-rest-functions:index.adoc#_delete_library[REST API: Delete Library]
 // end::rest-delete-library-call[]
 
 // tag::user-defined-functions[]
