--- a/modules/javascript-udfs/partials/libraries-and-scopes.adoc
+++ b/modules/javascript-udfs/partials/libraries-and-scopes.adoc
@@ -11,7 +11,7 @@ You can store JavaScript functions in [.term]#external libraries#.
 This enables you to share external function code for use in more than one {sqlpp} user-defined function.
 A library can contain one or more JavaScript functions.
 
-You must create the external library and the external function code using the xref:tools:udfs-ui.adoc[Query Workbench] or the {sqlpp} xref:n1ql-rest-api/functions.adoc[Functions REST API].
+You must create the external library and the external function code using the xref:tools:udfs-ui.adoc[Query Workbench] or the {sqlpp} xref:n1ql-rest-functions:index.adoc[Functions REST API].
 // This line left blank intentionally
 
 // end::extract[]
