--- a/modules/n1ql/pages/n1ql-language-reference/createfunction.adoc
+++ b/modules/n1ql/pages/n1ql-language-reference/createfunction.adoc
@@ -640,7 +640,7 @@ endif::flag-devex-javascript-udfs[]
 == Related Links
 
 ifdef::flag-devex-javascript-udfs[]
-* To manage external libraries and external functions, see xref:server:n1ql:n1ql-rest-api/functions.adoc[].
+* To manage external libraries and external functions, see xref:n1ql-rest-functions:index.adoc[].
 endif::flag-devex-javascript-udfs[]
 * To execute a user-defined function, see xref:n1ql-language-reference/execfunction.adoc[].
 * To see the execution plan for a user-defined function, see xref:n1ql-language-reference/explainfunction.adoc[].
