--- a/modules/n1ql/pages/n1ql-language-reference/execfunction.adoc
+++ b/modules/n1ql/pages/n1ql-language-reference/execfunction.adoc
@@ -93,7 +93,7 @@ For examples, refer to xref:n1ql-language-reference/createfunction.adoc#examples
 
 * To create user-defined functions, refer to xref:n1ql-language-reference/createfunction.adoc[].
 ifdef::flag-devex-rest-api[]
-* To manage external libraries and external functions, see xref:server:n1ql:n1ql-rest-api/functions.adoc[].
+* To manage external libraries and external functions, see xref:n1ql-rest-functions:index.adoc[].
 endif::flag-devex-rest-api[]
 * To see the execution plan for a user-defined function, see xref:n1ql-language-reference/explainfunction.adoc[].
 * To include a user-defined function in an expression, see xref:n1ql-language-reference/userfun.adoc[].
