--- a/modules/n1ql/pages/n1ql-manage/query-settings.adoc
+++ b/modules/n1ql/pages/n1ql-manage/query-settings.adoc
@@ -6,8 +6,8 @@
 :rest-cluster-query-settings: xref:rest-api:rest-cluster-query-settings.adoc
 :general-settings-query-settings: xref:manage:manage-settings/general-settings.adoc#query-settings
 :couchbase-cli-setting-query: xref:cli:cbcli/couchbase-cli-setting-query.adoc
-:n1ql-rest-api-admin: xref:n1ql:n1ql-rest-api/admin.adoc
-:n1ql-rest-api-index: xref:n1ql:n1ql-rest-api/index.adoc
+:n1ql-rest-api-admin: xref:n1ql-rest-admin:index.adoc
+:n1ql-rest-api-index: xref:n1ql-rest-query:index.adoc
 :cbq-shell: xref:n1ql:n1ql-intro/cbq.adoc
 :rest-intro: xref:rest-api:rest-intro.adoc
 :query-settings: xref:clusters:query-service/query-workbench.adoc#query-settings
