DOC-12652: Convert other server REST API references to use OpenAPI generator (#280)
* Update links to Query Settings REST API
* Update includes of Query Settings REST API
* Driveby fixes for CURL() function
* Update links to Query Settings examples
* Add table-style partial
* Add table-style for CURL() reference

--- a/modules/n1ql/pages/n1ql-language-reference/curl.adoc
+++ b/modules/n1ql/pages/n1ql-language-reference/curl.adoc
@@ -8,6 +8,9 @@
 :url-yahoo-api: https://developer.yahoo.com/api/
 :url-google-geo: https://developers.google.com/maps/documentation/geocoding/intro
 
+// TEMP
+include::partial$n1ql-language-reference/table-style.adoc[]
+
 The `CURL()` function implements a subset of {url-wiki-curl}[cURL^] functionality and enables {sqlpp} queries to interact and integrate with external JSON data sources available over HTTP/REST.
 This allows federated queries against external data sources, such as the {url-google-maps}[Google geocoding API^], {url-yahoo-api}[Yahoo API^], or other Couchbase clusters.
 The federated queries can leverage full querying capabilities of {sqlpp}, including functions, expressions, sub-queries, JOINs, NESTs, UNNESTs etc.
@@ -227,19 +230,19 @@ Click btn:[+] to add another URL to the list.
 
 Click btn:[-] to remove a URL from the list.
 
-==== From CBQ
+==== From the Query Settings REST API
 
-From a CBQ prompt, you can send a CURL() command to allow or disallow specific URLs, for example:
+You can send a call to the Query Settings REST API to allow or disallow specific URLs, for example:
 
 [source,sh]
 ----
-include::rest-api:example$query-settings-post-access.sh[]
+include::n1ql-rest-settings:example$query-settings-post-access.sh[tags=request]
 ----
 
 The access list file command structure is described in the following table.
 
 .Structure of Access List for CURL()
-include::rest-api:partial$query-settings/definitions.adoc[tag=access]
+include::n1ql-rest-settings:index.adoc[tag=Access]
 
 == Design Considerations
 
@@ -637,7 +640,7 @@ WHERE to_number(hdp_low) < min_threshold;
 ====
 
 [[Ex6]]
-.Use CURL() to allow two URLs and disallow one URL
+.Allow two URLs and disallow one URL
 ====
 .Request
 [source,sh]
@@ -652,7 +655,7 @@ curl -X POST -u Administrator:password \
 ====
 
 [[Ex7]]
-.Use CURL() to allow all access to all endpoints
+.Allow all access to all endpoints
 ====
 .Request
 [source,sh]
@@ -665,7 +668,7 @@ curl -X POST -u Administrator:password \
 ====
 
 [[Ex8]]
-.Use CURL() to turn off access to all endpoints and clear the Allowed and Disallowed lists
+.Turn off access to all endpoints and clear the Allowed and Disallowed lists
 ====
 .Request
 [source,sh]
@@ -680,7 +683,7 @@ curl -X POST -u Administrator:password \
 ====
 
 [[Ex9]]
-.Use CURL() to turn off access to all endpoints but make no changes to the Allowed and Disallowed lists
+.Turn off access to all endpoints but make no changes to the Allowed and Disallowed lists
 ====
 .Request
 [source,sh]
@@ -693,7 +696,7 @@ curl -X POST -u Administrator:password \
 ====
 
 [[Ex10]]
-.Use CURL() to turn off access to all endpoints, allow one URL, and clear the Disallowed list
+.Turn off access to all endpoints, allow one URL, and clear the Disallowed list
 ====
 .Request
 [source,sh]
@@ -708,7 +711,7 @@ curl -X POST -u Administrator:password \
 ====
 
 [[Ex11]]
-.Use CURL() to turn off access to all endpoints, disallow one URL, and clear the Allowed list
+.Turn off access to all endpoints, disallow one URL, and clear the Allowed list
 ====
 .Request
 [source,sh]
@@ -723,7 +726,7 @@ curl -X POST -u Administrator:password \
 ====
 
 [[Ex12]]
-.Use CURL() to allow an IP address and port instead of a website name
+.Allow an IP address and port instead of a website name
 ====
 .Request
 [source,sh]
@@ -738,7 +741,7 @@ curl -X POST -u Administrator:password \
 ====
 
 [[Ex13]]
-.Use CURL() to allow and disallow the same URL -- and get an error
+.Allow and disallow the same URL -- and get an error
 ====
 .Request
 [source,sh]
