--- a/modules/n1ql/pages/n1ql-manage/query-settings.adoc
+++ b/modules/n1ql/pages/n1ql-manage/query-settings.adoc
@@ -4,7 +4,7 @@
 :page-partial:
 
 // External cross-references
-:rest-cluster-query-settings: xref:rest-api:rest-cluster-query-settings.adoc
+:rest-cluster-query-settings: xref:n1ql-rest-settings:index.adoc
 :general-settings-query-settings: xref:manage:manage-settings/general-settings.adoc#query-settings
 :couchbase-cli-setting-query: xref:cli:cbcli/couchbase-cli-setting-query.adoc
 :n1ql-rest-api-admin: xref:n1ql-rest-admin:index.adoc
@@ -370,11 +370,11 @@ http://localhost:8091/settings/querySettings \
 The table below contains details of all cluster-level query settings.
 
 .Cluster-Level Query Settings
-include::rest-api:partial$query-settings/definitions.adoc[tag=settings]
+include::n1ql-rest-settings:index.adoc[tag=Settings]
 
-[[_access]]
+[[Access,Access]]
 **Access**
-include::rest-api:partial$query-settings/definitions.adoc[tag=access]
+include::n1ql-rest-settings:index.adoc[tag=Access]
 
 [[service-level-query-settings]]
 == Node-Level Query Settings
