--- a/modules/learn/pages/services-and-indexes/indexes/query-without-index.adoc
+++ b/modules/learn/pages/services-and-indexes/indexes/query-without-index.adoc
@@ -316,7 +316,7 @@ You can get or set the N1QL Feature Controller setting in any of the following w
 
 |REST API
 |Cluster-level
-|xref:rest-api:rest-cluster-query-settings.adoc[]
+|xref:n1ql-rest-settings:index.adoc[]
 |`queryN1qlFeatCtrl`
 
 |REST API
