DOC-12652: Convert other server REST API references to use OpenAPI generator (#280)
* Update links to Query Settings REST API
* Update includes of Query Settings REST API
* Driveby fixes for CURL() function
* Update links to Query Settings examples
* Add table-style partial
* Add table-style for CURL() reference

--- a/modules/indexes/pages/query-without-index.adoc
+++ b/modules/indexes/pages/query-without-index.adoc
@@ -316,7 +316,7 @@ You can get or set the N1QL Feature Controller setting in any of the following w
 
 |REST API
 |Cluster-level
-|xref:rest-api:rest-cluster-query-settings.adoc[]
+|xref:n1ql-rest-settings:index.adoc[]
 |`queryN1qlFeatCtrl`
 
 |REST API
